# nemori

./: .env.example  .gitignore  CLAUDE.md  DOMAIN_MODEL.md  INTEGRATION_LAYER.md  LICENSE  NEMORI_TEST_README.md  PostgreSQL_Integration_Summary.md  README-CN.md  README-zh.md  README.md  RETRIEVAL_LAYER.md  SEMANTIC_MEMORY_DESIGN.md  SEMANTIC_MEMORY_README.md  STORAGE_LAYER.md  check_episode_data.py  check_semantic_data.py  comprehensive_nemori_test.py  config.json  debug_semantic_search.py  docker-compose.yml  enhanced_semantic_demo.py  fix_index_alignment.py  native_semantic_discovery_test.py  nemori_api.py  nemori_full_functionality_test.py  overview.md  plan.md  pyproject.toml  readme.md  report.md  requirements.txt  semantic_memory_demo.py  simple_nemori_full_test.py  simple_nemori_test.py  simple_rag.py  simple_semantic_demo.py  simple_test.py  temp_combined.py  test_data_generator.py  (+6 more)
.claude/: settings.json
chroma_db/: chroma.sqlite3
docs/: performance_log.md  postgresql_setup.md  quickstart.md
docs/superpowers/plans/: 2026-03-16-nemori-refactoring.md  2026-03-23-locomo-eval-and-multimodal.md
docs/superpowers/specs/: 2026-03-16-multimodal-embedding-design.md  2026-03-16-nemori-refactoring-design.md
evaluation/: README.md  nemori-eval-patch-for-memos-v0.2.0.patch  readme.md  run.sh
evaluation/locomo/: add.py  config.json  evals.py  generate_scores.py  search.py
evaluation/locomo/metrics/: llm_judge.py
evaluation/longmemeval/: add.py  config.json  evals.py  search.py
evaluation/memos/: env.template  requirements-test.txt  run.sh  setup_test_env.sh
evaluation/memos/evaluation/: run.sh
evaluationV2/memos/: run.sh
examples/: postgresql_example.py  quickstart.py
nemori/: __init__.py  config.py  episode_manager.py  factory.py
nemori/api/: facade.py
nemori/builders/: __init__.py  conversation_builder.py  enhanced_conversation_builder.py
nemori/core/: __init__.py  builders.py  data_types.py  episode.py  episode_manager.py  memory_system.py
nemori/db/: buffer_store.py  connection.py  episode_store.py  migrations.py  qdrant_store.py  semantic_store.py
nemori/domain/: __init__.py  exceptions.py  interfaces.py  models.py
nemori/llm/: __init__.py  client.py  orchestrator.py  prompts.py  protocol.py
nemori/llm/generators/: __init__.py  episode.py  merger.py  segmenter.py  semantic.py
nemori/llm/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py
nemori/retrieval/: __init__.py  enhanced_retrieval_service.py  retrieval_types.py  semantic_retrieval_service.py  service.py  unified_service.py
nemori/retrieval/providers/: __init__.py  base.py  bm25_provider.py  embedding_provider.py  semantic_embedding_provider copy 2.py  semantic_embedding_provider.py
nemori/search/: __init__.py  unified.py
nemori/semantic/: __init__.py  discovery.py  evolution.py  relationship_discovery.py  unified_retrieval.py
nemori/services/: embedding.py  event_bus.py
nemori/storage/: __init__.py  duckdb_semantic_storage.py  duckdb_storage.py  factory.py  jsonl_storage.py  memory_storage.py  postgresql_semantic_storage.py  postgresql_storage.py  repository.py  sql_models.py  storage_types.py
nemori/utils/: image.py
playground/: README.md  README_locomo.md  REFACTOR_SUMMARY.md  basic_demo.py  build_memory.ipynb  intelligent_demo.py  locomo.py  locomo_interactive.py
scripts/: benchmark.py  clean_redundant_metadata.py  init_workspace.py  rebuild_vectors.py  run_ci.sh  test_openrouter_compat.py
src/: __init__.py  config.py
src/api/: facade.py
src/core/: __init__.py  boundary_detector.py  lightweight_search_system.py  memory_system.py  message_buffer.py
src/db/: buffer_store.py  connection.py  episode_store.py  migrations.py  semantic_store.py
src/domain/: __init__.py  interfaces.py  models.py
src/generation/: __init__.py  batch_segmenter.py  episode_generator.py  episode_merger.py  prediction_correction_engine.py  prompts.py  prompts_auto.py  prompts_zh.py  semantic_generator.py
src/infrastructure/: indices.py  repositories.py
src/llm/: client.py  orchestrator.py  prompts.py
src/llm/generators/: __init__.py  episode.py  segmenter.py  (+1 more)
src/models/: __init__.py  episode.py  message.py  semantic.py
src/search/: __init__.py  bm25_search.py  chroma_search.py  episode_original_message_search.py  original_message_search.py  unified.py  unified_search.py  vector_search.py
src/services/: cache.py  embedding.py  event_bus.py  metrics.py  providers.py  task_manager.py
src/storage/: __init__.py  base_storage.py  episode_storage.py  semantic_storage.py
src/utils/: __init__.py  embedding_client.py  llm_client.py  performance.py  text.py  token_counter.py
test/: check_embedding_normalization.py  check_vector_db_alignment.py  compare_query_embeddings.py  debug_memory_search_system.py  debug_score_formatting.py  debug_search_index_alignment.py  search_single_query.py  semantic_search_caroline.py  validate_memory_system.py  verify_search_consistency.py
tests/: README_search_tests.md  __init__.py  conftest.py  quick_search_test.py  test_buffer_store.py  test_builders.py  test_config.py  test_connection.py  test_data_types.py  test_duckdb_storage.py  test_e2e_full.py  test_embedding.py  test_episode.py  test_episode_manager_integration.py  test_episode_store.py  test_event_bus.py  test_exceptions.py  test_facade.py  test_factory.py  test_generators.py  test_image_utils.py  test_integration_openrouter.py  test_interfaces.py  test_jsonl_storage.py  test_llm_client.py  test_llm_providers.py  test_manual_search.py  test_memory_system.py  test_migrations.py  test_models.py  test_multimodal_pipeline.py  test_orchestrator.py  test_postgresql_storage.py  test_retrieval_providers.py  test_retrieval_service.py  test_retrieval_types.py  test_search.py  test_semantic_data_types.py  test_semantic_memory.py  test_semantic_memory_comprehensive.py  (+5 more)
web-react/: README.md  package-lock.json  package.json  start.sh  tailwind.config.js  tsconfig.json  使用指南.md
web-react/public/: index.html
web-react/src/: App.css  App.tsx  types.ts
(+86 files in other folders)
